# 14_EUFactForce

./: .dockerignore  .env.template  .gitattributes  .gitignore  Dockerfile  EXPECTED_RESULTS.md  GROUND_TRUTH_SETUP.md  README.md  SEED_DB_GUIDE.md  UBIQUITOUS_LANGUAGE.md  docker-compose.override.yml  docker-compose.yml  ground_truth_50_articles.csv  manage.py  parser_quality_report.json  pyproject.toml  pytest.ini  retrieval_quality_report.json  retrieval_realism_report.json  summary.jsonl  test_parser_quality.py  test_retrieval_quality.py  test_retrieval_realism.py  verified_ground_truth.csv
.claude/: settings.local.json
.github/workflows/: pre-commit.yaml
data/seed/: vaccine_autism_evidence_curated.csv
docker/: entrypoint.sh
docs/: prd-canonical-document.md
eu_fact_force/app/: settings.py  urls.py
eu_fact_force/dash-app/: Dockerfile  README.md  app.py  requirements.txt
eu_fact_force/exploration/: parsing_benchmark.py
eu_fact_force/ingestion/: admin.py  apps.py  chunking.py  embedding.py  forms.py  models.py  parsing.py  pdf_utils.py  s3.py  search.py  services.py  signals.py  urls.py  views.py
eu_fact_force/utils/: decorators.py
ground_truth_data/: download_manifest.json
ground_truth_data/text/: arxiv:2604.04032v1.txt  arxiv:2604.04858v1.txt  arxiv:2604.06499v1.txt  arxiv:2604.08334v1.txt
ingestion/: timing.py
ingestion/embedding/: README.md  benchmark.py  benchmark_chunking.py  benchmark_config.py  benchmark_data.py  benchmark_embedding.py  benchmark_labels.py  benchmark_metrics.py  benchmark_output.py  benchmark_runner.py  weak_labeling.py  weak_labeling_calibration.py  weak_labeling_config.py  weak_labeling_generation.py  weak_labeling_index.py  weak_labeling_io.py  weak_labeling_text.py
ingestion/front_upload/: api_front_upload.py
ingestion/parsing/: .env.example  README.md  benchmark.py  fidelity_optimization.py  info.md  parser_config.py  pdf_cleaner.py  quality_scoring.py  scientific_paper_analysis_summary.md  score_single_file.py  text_cleaning.py
minio_data/.minio.sys/: format.json
pipeline_pgp/: pgp_ingest.py
pipeline_pgp/dash_app/: README.md  app.py  layout.py
pipeline_pgp/data/: PGP x D4G- Exported Vaccine Data.xlsx
tests/: conftest.py  factories.py  test_run_pipeline.py
tests/ingestion/: test_article_search.py  test_chunking.py  test_embedding.py  test_ingest_by_doi.py  test_metadata_collection.py  test_models.py  test_parsing.py  test_run_pipeline.py  test_search.py  test_seed_db.py  test_seed_db_search.py  test_services.py
verified_ground_truth_data/: download_manifest.json
verified_ground_truth_data/text/: arxiv:1409.2651v1.txt  arxiv:1905.12616v3.txt  arxiv:2603.26358v1.txt  arxiv:2603.26502v1.txt  arxiv:2603.26548v1.txt  arxiv:2603.26888v1.txt  arxiv:2603.26913v1.txt  arxiv:2603.26914v1.txt  arxiv:2603.26935v1.txt  arxiv:2603.26994v1.txt  arxiv:2603.27095v2.txt  arxiv:2603.27276v1.txt  arxiv:2603.28930v1.txt  arxiv:2603.29316v1.txt  arxiv:2604.00871v1.txt  arxiv:2604.01385v1.txt  arxiv:2604.01475v1.txt  arxiv:2604.01734v1.txt  arxiv:2604.02886v1.txt  arxiv:2604.03970v1.txt  arxiv:2604.07309v1.txt  arxiv:2604.07493v1.txt  arxiv:2604.07557v1.txt
(+344 files in other folders)
