[project]
name = "14_eu_fact_force"
version = "0.1.0"
description = "A narrative-centric platform to counter health misinformation by connecting evidence-based responses with public health actors and community leaders across Europe"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
parsing = [
    "llama-index-core>=0.12.0",
    "llama-index-readers-llama-parse>=0.4.0",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.0.0",
]
