[project]
name = "14_eu_fact_force"
version = "0.1.0"
description = "A narrative-centric platform to counter health misinformation by connecting evidence-based responses with public health actors and community leaders across Europe"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "django>=6.0.2",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.2.4",
    "sentence-transformers>=5.2.3",
    "torch>=2.5",
    "django-storages[s3]>=1.14",
    "boto3>=1.34",
    "gunicorn>=25.1.0",
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-cytoscape>=1.0.2",
    "pymupdf>=1.27.1",
    "psycopg2-binary>=2.9.11",
    "fitz>=0.0.1.dev2",
    "docling>=2.76.0",
    "docling-hierarchical-pdf>=0.1.6",
    "requests>=2.32.5",
    "arxiv>=2.4.1",
    "structlog>=25.5.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "eu_fact_force.app.settings"
pythonpath = ["."]

# Pin torch to the CPU-only wheel index. No one on this project runs with a
# GPU (no nvidia-docker in compose, no CUDA in deploy targets), so the default
# PyPI torch wheel's ~1.5 GB of nvidia-* dependencies is dead weight.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "factory-boy>=3.3.0",
    "jupyter>=1.1.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-django>=4.8",
    "pytest-factoryboy>=2.6.0",
    "ruff>=0.15.0",
    "seaborn>=0.13.2",
]
parsing = [
    "pypdf2>=3.0.1",
    "llama-index-core>=0.12.0",
    "llama-index-readers-llama-parse>=0.4.0",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.0.0",
]
graph = [
    "dash>=4.0.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-cytoscape>=1.0.2",
    "pymupdf>=1.27.1"
]
